Make sure selection is visible in feature tree

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -1082,5 +1082,10 @@ input[type=checkbox] {
   .featureinfo {
     background-color: #e9e9e9;
   }
+
+  ul ul li .selected {
+    color: #f00;
+    background-color: #fff;
+  }
 }
 
